# pyro-train

./: .dvcignore  .gitignore  CLAUDE.md  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: train.yml
data/02_models/yolo/: .gitignore
data/03_model_input/: .gitignore  yolo_train_val.dvc
results/: eval_results.json  eval_sequential_results.json
scripts/: release.py
scripts/data/model_input/: build.py
scripts/model/yolo/: benchmark.py  build_manifest.py  evaluate.py  evaluate_sequential.py  export.py  hyperparameter_search.py  train.py
scripts/model/yolo/configs/: baseline.yaml  best.yaml
src/pyro_train/: utils.py
src/pyro_train/model/yolo/: train.py
