[project]
name = "pyro-train"
version = "0.3.0"
description = "Machine Learning Training pipeline for Wildfire Detection 🔥"
authors = ["Pyronear <contact@pyronear.org>"]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "ultralytics==8.4.21",
    "pandas>=2.2.2,<3",
    "ncnn>=1.0.20250503",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "onnxslim>=0.1.53",
]

[dependency-groups]
dev = [
    "dvc>=3.50.0,<4",
    "mlflow>=2.12.1,<3",
    "ipython>=8.23.0,<9",
    "mypy>=1.9.0,<2",
    "dvc-s3>=3.2.0,<4",
    "ruff>=0.12.7",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
